feat(EIDOMNI-1127): update compliance specifications for Swiss Profile in Credential Endpoint and Issuer Metadata
